@@ -7,7 +7,8 @@ class CGUIDialogNetworkSetup :
 public:
   enum NET_PROTOCOL { NET_PROTOCOL_SMB = 0,
                       NET_PROTOCOL_XBMSP,
-                      NET_PROTOCOL_FTP };
+                      NET_PROTOCOL_FTP,
+                      NET_PROTOCOL_DAAP };
   CGUIDialogNetworkSetup(void);
   virtual ~CGUIDialogNetworkSetup(void);
   virtual bool OnMessage(CGUIMessage& message);
